--- a/public/500.html
+++ b/public/500.html
@@ -4,63 +4,73 @@
   <title>We're sorry, but something went wrong (500)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
+  .error-body {
+    background-color: white;
+    color: #666666;
     text-align: center;
-    font-family: arial, sans-serif;
+    font-family: "Lato", "Helvetica", sans-serif;
     margin: 0;
   }
 
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
-
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
+  .error-body h1 {
+    font-size: 1.5rem;
+    color: #005C71;
     line-height: 1.5em;
+    letter-spacing: 0.04rem;
+    font-weight: 400;
+    margin-bottom: 1.5rem;
   }
 
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  .error-content {
+    margin-top: 5rem;
+    margin-left: 1.2rem;
+    margin-right: 1.2rem;
+  }
+
+  .error-link {
+    color: #005C71;
+  }
+
+  .error-link:hover {
+    color: #007880;
+  }
+
+  .travel-mates-img {
+    height: 100px;
+    width: 100px;
+  }
+
+  .logo {
+    margin: 2rem;
+  }
+
+  .logo-start {
+    font-weight: 600;
+    font-size: 2rem;
+    color: #393e46;
+  }
+
+  #logo-end {
+    color: #00adb5;
+    font-size: 2rem;
   }
   </style>
 </head>
 
-<body class="rails-default-error-page">
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
+<body class="error-body">
+  <div class="error-content">
+    <img class="travel-mates-img" src="/android-chrome-192x192.png" alt="travel-mates-icon">
+    <!-- TravelMates Logo -->
+    <div class="logo">
+      <span class="logo-start">travel</span>
+      <span id="logo-end">mates</span>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <div class="dialog">
+      <div>
+        <h1>Sorry, mate, something went wrong!</h1>
+      </div>
+      <p>Head back to the <a class="error-link" href="/">Explore Page</a> to check out other trip inspirations.</p>
+    </div>
   </div>
 </body>
 </html>
